--- a/Server/lib/Web/public/css/in_m_kkutu.css
+++ b/Server/lib/Web/public/css/in_m_kkutu.css
@@ -675,9 +675,9 @@ input[type="checkbox"] {
 			color: #CCCCCC;
 			background-color: #111111;
 		}
-	.jjoriping{ width: 100%; }
-	.cw.jjoriping{ margin-top: -10px; }
-	.dg.jjoriping{
+	.luod{ width: 100%; }
+	.cw.luod{ margin-top: -10px; }
+	.dg.luod{
 		margin-left: 1.5em;
 		width: 325px;
 	 }
