--- a/Server/lib/Web/views/l_kkutu.pug
+++ b/Server/lib/Web/views/l_kkutu.pug
@@ -417,7 +417,7 @@ block Middle
 				input#cw-q-input(placeholder=L('inputHere'), style='width: 313px; height: 20px; font-size: 15px;')
 				div.cw-q-body
 			div.b-left.bb(style='display: none;')
-			div.jjoriping
+			div.luod
 				img.jjoObj.jjoEyeL(src='/img/jjoeyeL.png')
 				img.jjoObj.jjoNose(src='/img/jjonose.png')
 				img.jjoObj.jjoEyeR(src='/img/jjoeyeR.png')
