--- a/Server/lib/Web/views/m_kkutu.pug
+++ b/Server/lib/Web/views/m_kkutu.pug
@@ -399,7 +399,7 @@ block Middle
 				div.cw-q-head
 				input#cw-q-input(placeholder=L('inputHere'), style='width: 313px; height: 20px; font-size: 15px;')
 				div.cw-q-body
-			div.jjoriping
+			div.luod
 				img.jjoObj.jjoEyeL(src='/img/jjoeyeL.png')
 				img.jjoObj.jjoNose(src='/img/jjonose.png')
 				img.jjoObj.jjoEyeR(src='/img/jjoeyeR.png')
