--- a/Server/lib/Web/views/m_portal.pug
+++ b/Server/lib/Web/views/m_portal.pug
@@ -35,7 +35,7 @@ block Middle
 		div(style='float: left; padding-left: 70px;')
 			h3#holder= L('title')
 			img#logo(src='/img/kkutu/short_logo.png')
-		div.jjoriping(style='margin-top: 10px;')
+		div.luod(style='margin-top: 10px;')
 			img.jjoObj.jjoEyeL(src='/img/jjoeyeL.png', style='top: 40px; left: -270px;')
 			img.jjoObj.jjoNose(src='/img/jjonose.png', style='top: 42px; left: -170px;')
 			img.jjoObj.jjoEyeR(src='/img/jjoeyeR.png', style='top: 40px; left: -70px;')
