--- a/neofront/static/css/old/in_kkutu.css
+++ b/neofront/static/css/old/in_kkutu.css
@@ -426,8 +426,8 @@ iframe{
 		text-shadow: 0px 1px 5px #141414;
 		background-image: url('/img/kkutu/lefthand.png');
 	}
-	.jjoriping{ width: 500px; }
-	.cw.jjoriping{ margin-top: -10px; width: 322px; }
+	.luod{ width: 500px; }
+	.cw.luod{ margin-top: -10px; width: 322px; }
 		.jjoObj{ position: relative; }
 		.jjoEyeL{ top: 11px; left: 0px; }
 		.jjoNose{ top: 9px; left: 181px; }
