--- a/neofront/static/css/old/in_m_game_kkutu.css
+++ b/neofront/static/css/old/in_m_game_kkutu.css
@@ -392,8 +392,8 @@ iframe{
 			color: #CCCCCC;
 			background-color: #111111;
 		}
-	.jjoriping{ width: 100%; }
-	.cw.jjoriping{ margin-top: -10px; }
+	.luod{ width: 100%; }
+	.cw.luod{ margin-top: -10px; }
 		.jjoObj{ position: relative; }
 		.jjoEyeL{ top: 11px; left: 0px; }
 		.jjoNose{ top: 9px; left: calc(50% - 70px); }
