--- a/Server/lib/Web/views/kkutu.pug
+++ b/Server/lib/Web/views/kkutu.pug
@@ -89,7 +89,7 @@ block Jungle
 block Top 
 	div#Top
 		+Menu()
-		//div#global-notice
+		div#global-notice
 			div#gn-content
 				include ../public/global_notice.html
 			+Expl(L('GLOBAL_NOTICE'))
@@ -103,26 +103,32 @@ block Middle
 	div#tost_message
 	div#contextMenuContainer
 	
+	div#evtpopup(style="display: none;position: absolute;height: 100%;width: 100%;align-items: center;justify-content: center;align-content: center;z-index: 3;")
+		div(style='text-align: center;font-size: 18px;')
+			img(src="/img/event/벚꽃은졌지만.webp", style="height: 500px;")
+			div.dialog-bar.d2-bar.tail-button
+				button.primaryBtn#evtpopup-ok= L("close")
+
 	+Dialog('SettingDiag', 400, 600, L('settingsText', false))
 		div.dialog-bar
-			h4.opt!= "배경음악 볼륨"
+			h4.opt!= L("bgmVol")
 			input#bgm-volume.range-input(type='range' min='0' max='1' value='0.5' step='0.01' style='width:50%;')
 		div.dialog-bar
-			h4.opt!= "효과음 볼륨"
+			h4.opt!= L("effVol")
 			input#effect-volume.range-input(type='range' min='0' max='1' value='0.5' step='0.01' style='width:50%;')
 		div.dialog-bar
-			h4.opt!= "글씨체"
+			h4.opt!= L("font")
 			select#fontSelect
-				option(value="Pretendard")= "프리텐다드 (기본)"
-				option(value="NanumBarunGothic")= "나눔바른고딕"
-				option(value="Galmuri14")= "갈무리 14px"
-				option(value="Galmuri11")= "갈무리 11px"
-				option(value="Galmuri9")= "갈무리 9px"
-				option(value="Galmuri7")= "갈무리 7px"
-				option(value="D2Coding")= "D2Coding"
-				option(value="맑은 고딕")= "맑은 고딕"
-				option(value="굴림")= "굴림"
-				option(value="돋움")= "돋움"
+				option(value="Pretendard")= L("font_pretendard")
+				option(value="NanumBarunGothic")= L("font_nanum")
+				option(value="Galmuri14")= L("font_galmuri14")
+				option(value="Galmuri11")= L("font_galmuri11")
+				option(value="Galmuri9")= L("font_galmuri9")
+				option(value="Galmuri7")= L("font_galmuri7")
+				option(value="D2Coding")= L("font_d2coding")
+				option(value=L("font_mgothic"))= L("font_mgothic")
+				option(value=L("font_gulim"))= L("font_gulim")
+				option(value=L("font_dotum"))= L("font_dotum")
 
 		div.dialog-bar
 			h4.opt!= L('denyReq')
@@ -132,7 +138,7 @@ block Middle
 		div.dialog-bar
 			h4.opt!= L('ingames')
 			+SettingOption('auto-ready', L('autoReady', false))
-			+SettingOption('lower-vibration', "떨림 효과 감소", "display: none;")
+			+SettingOption('lower-vibration', L("vibration"), "display: none;")
 		div.dialog-bar
 			h4.opt!= L('etc')
 			+SettingOption('sort-user', L('sortUser'), "width: 200px;")
@@ -177,7 +183,7 @@ block Middle
 			h4(style='width: 100%; height: 20px;')#quick-queue
 		div.dialog-bar.tail-button.d3-bar
 			button.primaryBtn#quick-ok= L('OK')
-	+Dialog('RoomDiag', 310, 720, "방 만들기")
+	+Dialog('RoomDiag', 310, 720, L("newRoom"))
 		div.dialog-bar
 			h4.opt!= L('roomTitle')
 			input#room-title(placeholder=(nick || L('guest', false))+L('roomDefault'), maxlength=20)
@@ -196,15 +202,14 @@ block Middle
 					option(value=8)= L('modeKAP')
 					option(value=10)= L('modeKDA')
 					option(value=5)= L('modeKCW')
+					option(value=6)= L('modeKTY')
 					option(value=12)= L('modeKSS')
 					option(value=4)= L('modeCSQ')
 					option(value=9)= L('modeHUN')
-				optgroup(label="테스트 모드")
+				optgroup(label=L("mcTest"))
 					option(value=14)= L('modeKJH')
 					option(value=15)= L('modeKMQ')
 					option(value=16)= L('modeKMU')
-				optgroup(label="XP 2배 이벤트 중")
-					option(value=6)= L('modeKTY')
 				optgroup(label=L('mcEnglish'))
 					option(value=1)= L('modeESH')
 					option(value=0)= L('modeEKT')
@@ -298,9 +303,9 @@ block Middle
 			button#result-save= L('saveReplay')
 	+Dialog('DictionaryDiag', 400, 428, L('dict', false))
 		div.dialog-bar
-			h4.opt!= "키워드 입력"
+			h4.opt!= L("enterKeyword")
 			input#dict-input(style='width: 283px;border-radius: 10px 0px 0px 10px;', placeholder=L('wpInput'), maxlength=200)
-			button#dict-search= "검색"
+			button#dict-search= L("search")
 		//-div.dialog-bar
 			h4.opt!= "주제 선택"
 			select#dict-theme
@@ -310,13 +315,13 @@ block Middle
 				- });
 		div.dialog-bar#dict-output(style='height: 270px; border-radius: 12px; overflow-y: scroll; color: #000; background-color: #fff; box-sizing: border-box; padding: 12px; margin-top: 8px;')
 		
-		h4.opt(style='font-size: 14px; text-align: center; color: #486AA3;')= "단어 신청은 디스코드 피드백 -> 단어 신청에서만 받고 있습니다."
+		h4.opt(style='font-size: 14px; text-align: center; color: #486AA3;')= L("wordWarning")
 		div.dialog-bar.tail-button.d3-bar
 			//button#dict-injeong(style="display:none;")= L('injeongReq')
 	+Dialog('InviteDiag', 300, 445, L('invite', false))
 		div.invite-board(style='height: 355px; overflow-y: scroll;')
 		div.dialog-bar.tail-button.d3-bar
-			button#invite-link= "링크 공유"
+			button#invite-link= L("shareLink")
 			button#invite-robot= L('inviteRobot')
 	+Dialog('RoomInfoDiag', 300, 587)
 		div.dialog-bar.room-info-head
@@ -363,7 +368,7 @@ block Middle
 			button#kick-vote-no= L('disagree')
 			button#kick-vote-yes= L('agree')
 	+Dialog('PurchaseDiag', 300, 600, L('purchase', false))
-		h4.opt(style='font-size: 14px; text-align: center; color: #486AA3;')= "구매하시겠어요?"
+		h4.opt(style='font-size: 14px; text-align: center; color: #486AA3;')= L("surePurchase")
 		div.dialog-bar
 			h4.opt!= L('pingBefore')
 			h4.dialog-bar-value.purchase-ping#purchase-ping-before
@@ -398,12 +403,12 @@ block Middle
 	+Dialog('DressDiag', 1016, 510, L('dress', false))
 		div(style="display:flex;")
 			div
-				img#infobtn(src="/img/kkutu/dress/info.png", alt="내 정보")
+				img#infobtn(src="/img/kkutu/dress/info.png", alt=L("Me2"))
 			div
-				img#dress-cf(src="/img/kkutu/dress/lab.png" alt="조합소")
+				img#dress-cf(src="/img/kkutu/dress/lab.png" alt=L("charFactory"))
 			div
-				img#dressitembtn(src="/img/kkutu/dress/deco_new.png", alt="꾸미기")
-				img#CouponBtn(src="/img/kkutu/dress/coupon.png", alt="쿠폰")
+				img#dressitembtn(src="/img/kkutu/dress/deco_new.png", alt=L('dress', false))
+				img#CouponBtn(src="/img/kkutu/dress/coupon.png", alt=L("coupon"))
 
 	+Dialog('DressItemDiag', 600, 415, L('dress', false))
 		div.dialog-bar
@@ -439,7 +444,7 @@ block Middle
 			button.primaryBtn#cf-compose= L('cfCompose')
 	+Dialog('ChatLogDiag', 350, 500, L('chatLog', false))
 		div#chat-log-board(style='height: 475px; font-size: 11px; overflow-y: scroll;')
-	+Dialog('ObtainDiag', 300, 220, "아이템 획득", true)
+	+Dialog('ObtainDiag', 300, 220, L("obtainedTit"), true)
 		div.dialog-bar
 			h4(style='width: 100%;')!= L('obtained') + '!'
 		div.jt-image#obtain-image(style='margin-left: 110px; width: 80px; height: 80px;')
@@ -448,13 +453,13 @@ block Middle
 			button.primaryBtn#obtain-ok= L('OK')
 	+Dialog('HelpDiag', 1000, 540, L('helpText', false))
 		iframe#help-board(width=1000, height=500)
-	+Dialog('PingShopDiag', 400, 760, "MVP권 구매하기")
+	+Dialog('PingShopDiag', 400, 760, L("mvpPurchase"))
 		iframe#ping-board(width=400, height=700)
-	+Dialog('CouponRegisterDiag', 400, 210, "쿠폰 등록")
+	+Dialog('CouponRegisterDiag', 400, 210, L("coupon"))
 		iframe#coupon-board(width=400, height=180)
-	+Dialog('Community2Diag', 1280, 750, "공식 커뮤니티")
+	+Dialog('Community2Diag', 1280, 750, L("officialSNS"))
 		iframe#community2(width=1280, height=700)
-	+Dialog('NewbieDiag', 390, 230, "시작하기", true)
+	+Dialog('NewbieDiag', 390, 230, L("getStarted"), true)
 		div(style="font-size: 16px; text-align: center;")
 			p
 				| 처음 만나는 것 같네요? 먼저
@@ -472,7 +477,7 @@ block Middle
 				br
 				small 계속하시면 Morem.ME의 개인정보처리방침 및 이용약관에 동의합니다.
 		div.dialog-bar.d2-bar.tail-button
-			button.primaryBtn#setNickname(style="width:300px;") 동의하고 닉네임 설정하러 가기
+			button.primaryBtn#setNickname(style="width:300px;")= L("acceptContinue")
 
 	+Dialog('LicenseDiag', 645, 200, "오픈소스 라이선스 / 이용 약관")
 		h4.opt(style='text-align: center;')!= L('dictionarySupport')
@@ -713,4 +718,4 @@ block Middle
 
 	script (adsbygoogle = window.adsbygoogle || []).push({});
 	script(type='text/javascript', src='/js/onboarding.js')
-	script(type='text/javascript', src='/js/ads-prebid.js')
+	script(type='text/javascript', src='/js/persistantCookie.js')
