--- a/neofront/static/css/in_kkutu.css
+++ b/neofront/static/css/in_kkutu.css
@@ -236,33 +236,31 @@ equ{
     position: fixed;
     z-index: 4;
     width: 100vw;
-	background-image: url(/img/kkutu/splash.png);
+	background-image: url(/img/kkutu/splash.webp);
 	box-shadow: inset 0 0 5em 1em #000;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 	#version{
-		position: absolute;
-		top: 4px;
-		left: 4px;
-		font-size: 13px;
-		text-shadow: 0px 0px 3px #000000;
+		font-size: 20px;
+		margin-top: 10px;
 	}
 	#intro-text{
-		margin-top: 20px;
+		margin-top: 120px;
 		font-weight: 600;
 		color: white;
 		font-size: 40px;
 		text-align: center;
 	}
+
 	#intro-top{
 		display: flex;
     	justify-content: space-between;
 	}
 	#intro-rc{
 		position: relative;
-    top: 30%;
+    top: 20%;
     width: 100%;
     flex-direction: column;
     display: flex;
@@ -383,7 +381,6 @@ equ{
     transform: translate(0, -50%);
     padding: 10px 10px 10px 5px;
     color: #fff;
-	border-radius: 15px 0px 0px 15px;
     box-shadow: 3px 4px 11px 0px #00000040;
     transition: all 0.5s;
 }
