--- a/Server/lib/Web/views/m_kkutu.pug
+++ b/Server/lib/Web/views/m_kkutu.pug
@@ -97,7 +97,7 @@ block Middle
 		img#intro(src='/img/kkutu/m_intro.png')
 		//- img#intro-start(src='/img/kkutu/intro_start.gif')
 		div#version= VERSION
-		div#intro-text= L('LOADING')
+		div#intro-inner= L('LOADING')
 	+Dialog('SettingDiag', 300, 240, L('settingsText'))
 		div.dialog-bar
 			h4.opt!= L('mute')
