--- a/neofront/static/css/in_kkutu.css
+++ b/neofront/static/css/in_kkutu.css
@@ -266,6 +266,18 @@ equ{
     display: flex;
     align-items: center;
 	}
+	.fa-circle-notch{
+		margin-right: 15px;
+		animation: spin 1s linear infinite;
+	}
+	@keyframes spin {
+		0% {
+			transform: rotate(0deg);
+		}
+		100% {
+			transform: rotate(360deg);
+		}
+	}
 #Loading{
 	position: fixed;
 	padding-top: 200px;
