암호화 추가

--- a/Server/lib/Web/views/help.pug
+++ b/Server/lib/Web/views/help.pug
@@ -160,7 +160,7 @@ block Middle
 					| 우측 상단에는 한 행동씩 건너뛰는 단추와 일시정지 단추가 있습니다.
 				+Img('replay', "100%", 140)
 				p
-					| 게임이 끝나면 나타나는 결과 화면에서 [경기 저장] 단추를 누르면 리플레이 파일(.kkt)을 내려받을 수 있습니다.
+					| 게임이 끝나면 나타나는 결과 화면에서 [경기 저장] 단추를 누르면 리플레이 파일(.replay)을 내려받을 수 있습니다.
 					| 이 파일을 로비의 [리플레이] 메뉴에서 열어 리플레이를 구경할 수 있습니다.
 		div.page-body#box-c3
 			p
