--- a/Server/lib/Web/views/l_kkutu.pug
+++ b/Server/lib/Web/views/l_kkutu.pug
@@ -338,7 +338,7 @@ block Middle
 			button#purchase-no= L('NO')
 			button#purchase-ok= L('OK')
 	+Dialog('ReplayDiag', 300, 300, L('replay'))
-		input#replay-file(type='file', style='width: 288px;', accept=".kkt")
+		input#replay-file(type='file', style='width: 288px;', accept=".replay")
 		div.dialog-bar
 			h4= L('replayDate')
 			h4.dialog-bar-value#replay-date -
