이벤트 내용 리뉴얼

--- a/Server/lib/Web/views/kkutu.pug
+++ b/Server/lib/Web/views/kkutu.pug
@@ -495,6 +495,9 @@ block Middle
 			h4(style='width: 150px;')= L('myNickname')
 			input#dress-nickname(type='textfield', placeholder=L('myNicknameX'), style='width: 435px;', maxlength=12)
 		div.dialog-bar
+			h4(style='width: 150px;')= L('myPatreon')
+			input#dress-patreon(type='textfield', placeholder=L('myPatreonX'), style='width: 435px;', maxlength=12)
+		div.dialog-bar
 			h4(style='width: 150px;')!= L('myExordial')
 			input#dress-exordial(type='textfield', placeholder=L('myExordialX'), style='width: 435px;', maxlength=100)
 		div.dialog-bar(style='width: 150px;')
