--- a/Server/lib/Web/views/kkutu.pug
+++ b/Server/lib/Web/views/kkutu.pug
@@ -495,9 +495,6 @@ block Middle
 			h4(style='width: 150px;')= L('myNickname')
 			input#dress-nickname(type='textfield', placeholder=L('myNicknameX'), style='width: 435px;', maxlength=12)
 		div.dialog-bar
-			h4(style='width: 150px;')= L('myPatreon')
-			input#dress-patreon(type='textfield', placeholder=L('myPatreonX'), style='width: 435px;', maxlength=12)
-		div.dialog-bar
 			h4(style='width: 150px;')!= L('myExordial')
 			input#dress-exordial(type='textfield', placeholder=L('myExordialX'), style='width: 435px;', maxlength=100)
 		div.dialog-bar(style='width: 150px;')
@@ -582,14 +579,23 @@ block Middle
 	+Dialog('LvEventDiag', 730, 700, "이벤트 안내")
 		div#pre-content(style="background: #fff;")
 			img(src="/img/event/comingsoon.png")
-		div#event-content(style="display:none;background: #fff;overflow-y: scroll;height: 660px;overflow-x: hidden;")
-			img(src="/img/event/gift상단.png")
-			img(src="/img/event/gift보산.png")
-			img(src="/img/event/gift산정기준.png")
-			img(src="/img/event/current-level.png")
-			div(style="font-size: 40px;font-weight:bold; text-align: center;color: #000;background-color: #fff;")
-				p#userLevel(style="margin:0px") PLATINUM
-			img#lockedItem(src="/img/event/acryll-lock.png")
+		div#event-content(style="display:none;background: #fff;height: 660px;overflow-x: hidden;")
+			div#event-tabs(style="display:none;")
+				img#event1(src="/img/event/이벤트_s2.png")
+				img#event2(src="/img/event/이벤트_mvp.png")
+			div#event1-content(style="background: #fff;")
+				img(src="/img/event/어서와요S2_헤더.png", style="width:100%;")
+				img(src="/img/event/어서와요S2_WP.png")
+				img(src="/img/event/어서와요S2_WP_예시.png")
+				img(src="/img/event/어서와요S2_타이틀1.png")
+				div(style="font-size: 20px;text-align: center;color: gray;background-color: #fff;")
+					p#userLogic(style="margin:0px") 
+				div(style="font-size: 40px;font-weight:bold; text-align: center;color: #000;background-color: #fff;")
+					p#userLevel(style="margin:0px") 0WP
+				img#lockedItem(src="/img/event/오픈전.png")
+			div#event2-content(style="display:none;background: #fff;")
+				img(src="/img/event/mvp권_헤더.png", style="width:100%;")
+				img(src="/img/event/mvp권_특전.png")
 
 	+Dialog('TeamSelectDiag', 500, 85, "팀 설정")
 		div.team-selector
