--- a/Server/lib/Web/public/css/in_m_kkutu.css
+++ b/Server/lib/Web/public/css/in_m_kkutu.css
@@ -23,34 +23,70 @@ equ{
 	font-style: italic;
 }
 #Middle{
-	margin-top: 35px;
+	margin-top: 44px;
 }
-#Intro{
-	position: fixed;
-	z-index: 3;
-	width: 100%;
+html {
+	overflow-x: hidden;
 }
 .ChatBox .product-title{
 	display:none;
 }
-#Intro img{
-	width: 100%;
+#Intro{
+	padding-bottom: 50px;
+    box-sizing: border-box;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 20px;
+    background: #F1F5F9;
+    height: 100vh;
+    position: fixed;
+    z-index: 4;
+    width: 100vw;
+	background-image: url(/img/kkutu/splash.webp);
+	box-shadow: inset 0 0 5em 1em #000;
+	background-position: right;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 	#version{
-		position: absolute;
-		top: 4px;
-		left: 4px;
-		font-size: 13px;
-		text-shadow: 0px 0px 3px #000000;
+		font-size: 20px;
+		margin-top: 10px;
 	}
 	#intro-text{
-		position: absolute;
-		top: 60%;
-		left: 0px;
-		width: 100%;
-		font-size: 15px;
+		margin-top: 120px;
+		font-weight: 600;
+		color: white;
+		font-size: 20px;
 		text-align: center;
-		text-shadow: 0px 0px 3px #000000;
+	}
+
+	#intro-top{
+		display: flex;
+    	justify-content: space-between;
+	}
+	#intro-rc{
+		position: relative;
+		top: 30%;
+		width: 100%;
+		flex-direction: column;
+		display: flex;
+		align-items: center;
+	}
+	.fa-circle-notch{
+		margin-right: 15px;
+		animation: spin 1s linear infinite;
+	}
+	@keyframes spin {
+		0% {
+			transform: rotate(0deg);
+		}
+		100% {
+			transform: rotate(360deg);
+		}
+	}
+
+	.dark{
+		display:none;
 	}
 #Loading{
 	position: fixed;
@@ -64,7 +100,7 @@ equ{
 }
 #Top{
     box-shadow: 0 2px 6px 0 rgba(0,0,0,0.12), inset 0 -1px 0 0 #dadce0;
-    background: #fffcf3;
+    background-color: #E5E7EB;
 	position: fixed;
 }
 #Top .menu-btn{
@@ -224,19 +260,19 @@ iframe{
 	  
 	  @keyframes zoomIn {
 		from {
-			transform: translateY(100px);
+			transform: translateX(100px);
 		}
 		to {
-			transform: translateY(0px);
+			transform: translateX(0px);
 		}
 	  }
 	
 	  @keyframes zoomOut {
 		from {
-			transform: translateY(0px);
+			transform: translateX(0px);
 		}
 		to {
-			transform: translateY(100px);
+			transform: translateX(100px);
 		}
 	  }
 	
@@ -277,28 +313,29 @@ input[type="checkbox"] {
     display: none;
 }
 .dialog{
-    top: 45px!important;
-    left: 0px!important;
-    height: 95vh!important;
-    width: 100vw!important;
     display: none;
+	z-index: 5;
     position: fixed;
     color: #111111;
     box-shadow: 0px 1px 1px #141414;
     background-color: #EEEEEE;
 }
-	.dialog-bar{ float: left; margin: 3px 0px; width: 100%; }
-	.dialog-bar h4{ padding: 10px;
+	.dialog-bar{     float: left;
+		margin: 3px 10px;
+		width: 100%;
+		box-sizing: border-box; }
+	.dialog-bar h4{     padding: 10px 0px;
 		float: left;
 		font-size: 16px;
 		width: 100%;
 		font-weight: 700;
 	}
 	.dialog-bar-value{ width: calc(100% - 100px) !important; text-align: left !important; }
-	.dialog-bar input, .dialog-bar select{ margin-left: 10px;
+	.dialog-bar input, .dialog-bar select{
 		float: left;
 		width: 188px;
 		box-sizing: inherit;
+		border-radius: 10px;
 		outline: none; }
 	.dialog-bar label{ font-size: 13px; }
 	.dialog-bar button{ float: left; }
@@ -330,19 +367,54 @@ input[type="checkbox"] {
     border: none;
 	}
 	.dialog .closeBtn{
-		float: right;
+		float: left;
 		border-radius: 6px;
 		margin-top: 1px;
-		width: 12px;
-		height: 12px;
+		margin-right: 6px;
 	}
 	.closeBtn::after {
-		content: "×";
+		content: "<";
 	}
-	.dialog .closeBtn:hover{ color: cyan; }
+
+	
+.side-panel {
+    background-color: #f3f4f6;
+    box-shadow: -4px 0px 4px 0px rgba(0, 0, 0, 0.25);
+    padding: 25px;
+    box-sizing: border-box;
+    height: 100%;
+    width: 100%;
+    z-index: 10;
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+
+  #SideMenuCloseBtn{
+	font-size: 24px;
+    border: none;
+    border-radius: 999px;
+    background-color: transparent;
+    padding: 0px;
+  }
+
+  .panel-content h2 {
+	color: #000;
+    font-size: 24px;
+    font-weight: 700;
+	margin-bottom: 24px;
+  }
+
+  .sideFooter p{
+	color: #4B5563;
+    font-size: 12px;
+
+  }
+
+	.dialog .closeBtn:hover{ color: red; }
 	.dialog-head{
 		font-weight: 600;
-		padding: 11px 11px 20px 11px;
+		padding: 11px;
 		border-bottom: 1px solid #CCCCCC;
 		height: 20px;
 		color: #48473a;
@@ -373,10 +445,11 @@ input[type="checkbox"] {
 	width: calc(100% - 10px);
 }
 .product-title{
-	color: #ffffff;
-    background-color: #000000c4;
+	color: #6B7280;
+    background-color: #ffffff;
+    font-weight: 700;
 }
-.product-title i{ color: #ffffff; }
+.product-title i{ color: #6B7280; }
 .dialog-front{ z-index: 2; }
 #ProfileDiag .dialog-body div{ float: left; }
 	.profile-moremi{ margin-right: 3px; width: 80px; height: 80px; }
@@ -417,26 +490,28 @@ input[type="checkbox"] {
 	.RoomListBox div{ float: left; }
 	.RoomListBox .product-body{ width: calc(100% - 10px); height: 330px; overflow-x: hidden; overflow-y: scroll; }
 	.rooms-item{
+		border-radius: 8px;
 		padding: 2px;
-		margin: 1px;
+		box-sizing: border-box;
+		margin: 5px 1px;
 		width: calc(100% - 8px);
-		height: 64px;
-		box-shadow: 0px 1px 1px #777777;
 		cursor: pointer;
-		background-color: #E4E4E4;
+		background-color: #ffffff;
 		transition: all 300ms ease;
+		box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
 	}
-		.rooms-create{ background-position: center;
-			background-size: cover;
-			background-image: url(/img/kkutu/createRoom.png); }
-		.rooms-create>div{ text-shadow: 2px 2px 0px black;
-			color: #ffffff;
-			font-style: italic;
+		.rooms-create{     border-radius: 8px;
+			background: #BFDBFE;}
+		.rooms-create>div{ 
+			color: #000000;
 			float: none;
 			padding: 10px 0px;
 			text-align: center;
-			font-size: 30px;
+			font-size: 20px;
 			font-weight: bold; }
+		.rooms-create i{
+			margin-right: 5px;
+		}
 		.rooms-channel{ position: relative; width: 10px; height: 10px; border-radius: 5px; margin-right: -10px; }
 			.channel-1{ background-color: #F99; }
 			.channel-2{ background-color: #FF7; }
@@ -463,7 +538,7 @@ input[type="checkbox"] {
 	.ShopBox .product-body{ height: 330px; }
 .RoomBox{
 	width: calc(100% - 10px);
-	height: 225px;
+	height: 225px!important;
 }
 	.RoomBox .product-title{ height: 12px; }
 	.RoomBox .product-title h5{ float: left; }
@@ -841,9 +916,42 @@ input[type="checkbox"] {
 				.word-m3-head{ color: #EEEEEE; }
 					.word-m3-head::before{ content: "("; }
 					.word-m3-head::after{ content: ")"; }
-			.word-theme{ color: #8ACFFF; }
-				.word-theme::before{ content: "<"; }
-				.word-theme::after{ content: ">"; }
+			.word-theme{ display: block;
+				font-size: 20px!important;
+				margin-bottom: 12px;
+				color: #6B7280;
+			 }
+			 .word-theme-legacy{
+				color: #6B7280;
+				margin-top: 2px;
+			 }
+			 .word-m3-legacy{
+				justify-content: center;
+				display: flex;
+			 }
+			.word-theme-legacy::before{ content: "<"; }
+			.word-theme-legacy::after{ content: "> "; }
+			.word-m3-body{
+				font-size: 20px!important;
+			}
+			.wordMeanClass{
+				background-color: #6B7280;
+				font-size: 16px!important;
+				color: #fff;
+				margin-left: 4.5px;
+				margin-right: 4.5px;
+			}
+			.word-title{ font-size: 30px!important;
+				display: block;
+				font-weight: 700;
+				margin-bottom: 4px;}
+
+			.word-m3-source{
+				font-size:12px!important;
+				display: block;
+				margin-top: 20px;
+				color: #6B7280;
+			}
 	.game-input{
 		position: relative;
 		top: -190px;
@@ -992,6 +1100,7 @@ input[type="checkbox"] {
 		height: 125px;
 		overflow-y: scroll;
 	}
+	.category-filter.selected{ color: #000000; border-bottom: solid 4px #8B5CF6; }
 		.dress-type{
 			float: left;
 			padding: 1px 0px;
@@ -1028,28 +1137,37 @@ input[type="checkbox"] {
 					.item-opts-head::after{ content: ": " }
 .ChatBox{
 	width: calc(100% - 10px) !important;
+	height: auto !important;
 }
 #Chat{
 	width: 100%;
 	overflow-y: scroll;
 }
 #Talk{
-	float: left;
-	border-right: none;
-	border-top-right-radius: 0px;
-	border-bottom-right-radius: 0px;
-	margin-top: 5px;
-	width: calc(100% - 82px);
-	height: 20px;
+	padding-left: 11px;
+    color: #000;
+    background-color: #e5e7eb;
+    border: none;
+    float: left;
+    width: calc(100% - 52px);
+    border-right: none;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+    margin-top: 5px;
+    font-size: 18px;
 }
 #ChatBtn{
-	float: left;
-	border-left: none;
-	border-top-left-radius: 0px;
-	border-bottom-left-radius: 0px;
-	margin-top: 5px;
-	width: 60px;
-	height: 20px;
+	padding: 6px 5px;
+    font-weight: 700;
+    background: #D8B4FE;
+    color: var(--Primary, #885CF6);
+    float: left;
+    border-left: none;
+    margin-top: 5px;
+    width: 24px;
+    font-size: 16px;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
 }
 	#Chat hr, #chat-log-board hr{
 		padding-top: 0px;
@@ -1059,31 +1177,46 @@ input[type="checkbox"] {
 	}
 	.chat-item{
 		float: left;
-		padding: 1px 0px;
-		margin: 1px 0px;
+		margin: 4px 0px;
+		padding: 7px 11px;
+		border-radius: 8px;
+		background-color: #FFF;
+		box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
+		box-sizing: border-box;
 		width: 100%;
 	}
-	.chat-notice{
-		background-color: #CCCCCC;
-	}
-		.chat-notice .chat-head{ color: #1767CA; }
 		.chat-stamp{
-			float: left;
+			float: right;
 			padding-top: 2px;
 			width: 70px;
 			font-size: 11px;
 			text-align: right;
 			color: #999999;
+			font-weight: 300;
 		}
 		.chat-head{
+			justify-content: space-between;
+			align-items: baseline;
+			width: 100%;
+			display: flex;
 			float: left;
 			padding-right: 4px;
 			margin-right: 5px;
-			width: 100px;
 			font-weight: bold;
 			text-align: center;
+			cursor: pointer;
 		}
-		.chat-body{ float: left; width: calc(100% - 190px); min-height: 14px; }
+		.chat-notice .chat-head {
+			padding: 1px 8px;
+			background-color: #1767CA;
+			
+			color: #fff;
+			border-radius: 6px;
+			width: auto;
+		}
+		.chat-body{     float: left;
+			min-height: 14px;
+			width: 100%; }
 .ADBox{
 	width: 1000px;
 	box-shadow: 0px 1px 1px #141414;
