--- a/Server/lib/Web/views/m_kkutu.pug
+++ b/Server/lib/Web/views/m_kkutu.pug
@@ -17,7 +17,7 @@
 extends m_layout
 
 mixin Dialog(id, w, h, t, nocls)
-	div.dialog(id=id, style=`width: ${w}px; height: ${h}px;`)
+	div.dialog(id=id, style=`width: 100%; height: 100%; top: 0px;`)
 		div(class=nocls ? 'no-close dialog-head' : 'dialog-head')
 			div.dialog-title(style=`width: ${w - 20}px;`)!= t || ''
 		div.dialog-body(style='font-size: 13px;')
@@ -50,7 +50,7 @@ block JS
 	script(src='https://challenges.cloudflare.com/turnstile/v0/api.js?compat=recaptcha', async, defer)
 	
 block CSS
-	link(rel='stylesheet', href='/css/in_game_kkutu_shop.css')
+	link(rel='stylesheet', href='/css/in_game_kkutu_shop_m.css')
 	
 block Jungle
 	div.middleFixer
@@ -64,13 +64,12 @@ block Jungle
 
 	div.kkutu-menu
 		//button#HelpBtn.for-lobby.for-master.for-normal.for-gaming(style='display: none;')!= L('help')
-		button#SettingBtn.for-lobby.for-master.for-normal.for-gaming(style='display: none;')!= L('settings')
 		//button#CommunityBtn.for-lobby.for-master.for-normal.for-gaming(style='display: none;')!= L('community')
 		button#SpectateBtn.for-master.for-normal(style='display: none;'): +FA('eye')
 		button#SetRoomBtn.for-master(style='display: none;'): +FA('wrench')
 		button#QuickRoomBtn.for-lobby(style='display: none;'): +FA('bolt')
 		button#NewRoomBtn.for-lobby(style='display: none;'): +FA('plus')
-		//- button#ShopBtn.for-lobby(style='display: none; background-color: #B3E7B7;'): +FA('shopping-bag')
+		button#ShopBtn.for-lobby(style='display: none; background-color: #B3E7B7;'): +FA('shopping-bag')
 		button#DictionaryBtn.for-lobby.for-master.for-normal.for-gaming(style='display: none;'): +FA('book')
 		//- button#WordPlusBtn.for-lobby.for-master.for-normal.for-gaming(style='display: none; background-color: #73D07A;')!= L('wordPlus')
 		button#InviteBtn.for-master(style='display: none;'): +FA('user-plus')
@@ -94,12 +93,79 @@ block Middle
 	
 	div#dimmer(style="display: none;")
 	div#tost_message
+	div#evtpopup(style="margin-top: -40px;display: none;position: absolute;height: 100%;width: 100%;align-items: center;justify-content: center;align-content: center;z-index: 3;background-color: rgba(0, 0, 0, 0.6);")
+		div(style='text-align: center;font-size: 18px;')
+			a(href="https://discord.gg/5b8kNZJawd", target="_blank")
+				img(src="/img/event/디스코드100명.webp", style="width: 90vw;")
+			div.dialog-bar.d2-bar.tail-button
+				button.primaryBtn#evtpopup-ok= L("close")
+	div#creditpopup(style="display: none;position: absolute;height: 100%;width: 100%;align-items: center;justify-content: center;align-content: center;z-index: 2;background-color:#000;")
+		div.topCloseInfo(style="right: 0;position: fixed;bottom: 0;z-index:10;")
+			button#creditpopup-close= "×"
+		div#creditpopup-content
+			div(style="width: 80%;font-size: 20px;text-align: center;color:#fff;")
+				p(style="font-size: 36px;font-weight: 700;") Morem.ME Team
+				strong DIRECTOR
+				p 유한선
+				br
+				strong CLOSED BETA TEST
+				p Sqlare Team   Kompasu   PSP Members
+				br
+				strong ILLUST
+				p DrawingPasu   Dolias10
+				br
+				strong MUSIC
+				p Xpolcore   Sihyeon Yu   Roman Rajczyk
+				p JJoriping (Original KKuTu)
+				br
+				strong SPECIAL THANKS TO
+				p JJoriping (Original KKuTu)
+				p KKuTu.IO (KKuTu-Game)
+				br
+				strong DICTIONARY DATA
+				p WordNet
+				p Standard Korean Dictionary
+				p 우리말샘 by 국립국어원
+				p 국토교통부 버스 정류장 데이터
+				p 한국철도공사 역명 데이터
+				p 워크넷 직업 데이터
+				br
+				strong Open Source License
+				p Pinkflower (Pink KKuTu, GPL)
+				p KKuTu.IO (KKuTu-Game, AGPL)
+				p JJoriping (Original KKuTu, GPL)
+				p lshqqytiger (KKuTu-Game, GPL)
+				p Fabric.JS Copyright (c) 2008-2015 Printio
+				p Diff-Match-Patch (Apache License 2.0)
+				p Intro.JS (MIT License)
+				p jQuery (MIT License)
+				p Moremi by JJoriping (CC-BY)
+				p KKuTu by JJoriping (CC-BY)
+				br
+				strong GPL License
+				p Copyright © 2007 Free Software Foundation, Inc. <https://fsf.org/>
+				p Everyone is permitted to copy and distribute verbatim copies of this license document, but changing it is not allowed.
+				br
+				strong CC-BY License
+				p This work is licensed under the Creative Commons Attribution 4.0 International License. To view a copy of this license, visit http://creativecommons.org/licenses/by/4.0/
+				br
+				strong AGPL License
+				p This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+				br
+				strong MIT License
+				p Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+				p The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+				br
+				strong Apache License 2.0
+				p Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
+				br
+				strong MVP USERS
+				p#mvpUsers= "Be first!"
+				br
+				strong LAST BUT NOT LEAST...
+				p#usernameCredit(style="font-size: 24px;")= "Unknown Player"
+				p YOU! Thank you for playing Plus KKuTu!
 
-	div#Intro
-		img#intro(src='/img/kkutu/m_intro.png')
-		//- img#intro-start(src='/img/kkutu/intro_start.gif')
-		div#version= VERSION
-		div#intro-inner= L('LOADING')
 	+Dialog('SettingDiag', 300, 240, L('settingsText'))
 		div.dialog-bar
 			h4.opt!= L("bgmVol")
@@ -193,12 +259,16 @@ block Middle
 					option(value=3)= L('modeKSH')
 					option(value=2)= L('modeKKT')
 					option(value=8)= L('modeKAP')
-					option(value=6)= L('modeKTY')
 					option(value=10)= L('modeKDA')
 					option(value=5)= L('modeKCW')
+					option(value=6)= L('modeKTY')
 					option(value=12)= L('modeKSS')
 					option(value=4)= L('modeCSQ')
 					option(value=9)= L('modeHUN')
+				optgroup(label=L("mcTest"))
+					option(value=14)= L('modeKJH')
+					option(value=15)= L('modeKMQ')
+					option(value=16)= L('modeKMU')
 				optgroup(label=L('mcEnglish'))
 					option(value=1)= L('modeESH')
 					option(value=0)= L('modeEKT')
@@ -287,17 +357,9 @@ block Middle
 			button#result-save= L('saveReplay')
 	+Dialog('DictionaryDiag', 300, 300, L('dict'))
 		div.dialog-bar
-			h4.opt!= L('wpHere')
-			input#dict-input(style='width: 183px;', placeholder=L('wpInput'), maxlength=200)
-		div.dialog-bar#dict-output(style='height: 195px; overflow-y: scroll; color: #BBBBBB; background-color: #111111;')
-		div.dialog-bar.tail-button
-			select#dict-theme(style='width: 86px;')
-				option(value="")!= L('pickInjeong')
-				- locals.KO_INJEONG.forEach(function(item){
-					option(value=item)!= L('theme_' + item)
-				- });
-			button#dict-search= L('SEARCH')
-			button#dict-injeong= L('injeongReq')
+			input#dict-input(style='width: 283px;border-radius: 10px 0px 0px 10px;', placeholder=L('wpInput'), maxlength=200)
+			button#dict-search= L("search")
+		div.dialog-bar#dict-output(style='max-height: 70vh; border-radius: 12px; overflow-y: scroll; color: #000; background-color: #fff; box-sizing: border-box; padding: 12px; margin-top: 8px;')
 	+Dialog('InviteDiag', 300, 420, L('invite'))
 		div.invite-board(style='height: 355px; overflow-y: scroll;')
 		div.dialog-bar.tail-button
@@ -383,11 +445,69 @@ block Middle
 		iframe#help-board(style="height: 1000px;width: 100%;")
 	+Dialog('Community2Diag', 300, 400, "공식 커뮤니티")
 		iframe#community(width=300, height=375)
+	+Dialog('NewbieDiag', 390, 230, L("getStarted"), true)
+		div(style="font-size: 16px; text-align: center;")
+			p
+				| 처음 만나는 것 같네요? 먼저
+				strong 닉네임을 설정
+				| 하고,
+				br
+				strong 방 만들기
+				| 를 통해 방을 만들어 첫 판을 플레이 해 보세요!
+				br
+				br
+				| 아참, 
+				strong 디스코드나 카페
+				| 에서 게임 정보를 받아볼 수 있어요.
+				br
+				br
+				small 계속하시면 Morem.ME의 개인정보처리방침 및 이용약관에 동의합니다.
+		div.dialog-bar.d2-bar.tail-button
+			button.primaryBtn#setNickname(style="width:300px;")= L("acceptContinue")
+
+	.side-panel#sideMenuDiag(style="display:none;")
+		.panel-content
+			button#SideMenuCloseBtn= "×"
+			h2= L('menu')
+			div
+				button.sidebtn
+					+FA("trophy")
+					h3= L('WIN')
+					h3.my-stat-record
+				button.sidebtn#SettingBtn
+					+FA("gear")
+					h3= L('settingsText')
+				button.sidebtn#HelpBtn
+					+FA("circle-question")
+					h3= L('helpText')
+				button.sidebtn#Community2Btn
+					+FA("bullhorn")
+					h3= L('bulletin')
+				button.sidebtn#CreditBtn
+					+FA("circle-info")
+					h3= L('credit')
+				
+				a(href="https://cafe.naver.com/ArticleRead.nhn?clubid=31109813&page=1&menuid=7&boardtype=L&articleid=110&referrerAllArticles=false", target="_blank")
+					button.sidebtn
+						+FA("file")
+						h3= L('PRIVACY')
+				a(href="https://cafe.naver.com/ArticleRead.nhn?clubid=31109813&page=1&menuid=7&boardtype=L&articleid=109&referrerAllArticles=false", target="_blank")
+					button.sidebtn
+						+FA("file")
+						h3= L('AGREEMENT')
+				a(href="https://cafe.naver.com/ArticleRead.nhn?clubid=31109813&page=1&menuid=7&boardtype=L&articleid=108&referrerAllArticles=false", target="_blank")
+					button.sidebtn
+						+FA("file")
+						h3= L('REFUND')
+
+				div.sideFooter
+					//img(src="/img/kkutu/moremme_gray.svg")
+					p Copyright &copy; 2021~ Morem.ME
 	+Product('UserList')
 		div#megauser
-			p.conn-desc.mfriend(style="display:none;")= "내 친구"
+			p.conn-desc.mfriend(style="display:none;")!= L('friendConn')
 			div#comm-friends(style="display:none;")
-			p.conn-desc= "전체 접속자"
+			p.conn-desc!= L('totalConn')
 			div#connList 불러오는 중
 	+Product('RoomList')
 		div 불러오는 중
@@ -403,7 +523,13 @@ block Middle
 			button.sidebtn#CommunityBtn
 				img(src="/img/kkutu/quick/friends_m.svg", alt="친구 목록")
 	+Product('Shop')
-		div 불러오는 중
+				div.shop-top
+					div.shop-categories
+						- for(var i in locals.CATEGORIES)
+							- var v = locals.GROUPS[locals.CATEGORIES[i]] || [];
+							div.category-filter.shop-type(id="shop-type-" + locals.CATEGORIES[i], value=v.join(','))!= L('category_' + locals.CATEGORIES[i])
+						//div.category-filter.shop-type(id="shop-type-usermarket")!= " 아이템"
+				div#shop-shelf(style='box-sizing: border-box; width: 100%;height: 300px;')
 	+Product('Room')
 		div.team-selector
 			div.team-button#team-0.team-0= L('teamSolo')
@@ -477,8 +603,9 @@ block Middle
 			input#game-input(placeholder=L('yourTurn')+' '+L('inputHere'))
 	+Product('Chat')
 		div#Chat
-		input#Talk(maxlength=200)
-		button#ChatBtn= L('send')
+		input#Talk(maxlength=200, placeholder=L('chatHotkey'), autocomplete="off")
+		button#ChatBtn
+			+FA('paper-plane')
 	div#ad
 
 block Bottom
@@ -486,3 +613,4 @@ block Bottom
 	div.bottom-legal!= L('dictionarySupport')
 	div.bottom-legal!= L('etcSupport')
 	script (adsbygoogle = window.adsbygoogle || []).push({});
+	script(type='text/javascript', src='/js/persistantCookie.js')
