--- a/Server/lib/Web/views/m_layout.pug
+++ b/Server/lib/Web/views/m_layout.pug
@@ -47,7 +47,19 @@ html
 		block CSS
 		block JS
 
-	body(style='min-width: 200px;')
+	body(style="font-family: 'Pretendard', sans-serif!important;")
+		div#Intro
+			div#intro-top
+				img(style="width: 120px", class="light", src="/img/kkutu/intro/moremme_dark.svg")
+				img(style="width: 120px", class="dark", src="/img/kkutu/intro/moremme_dark.svg")
+				img(style="height: 60px;", src="/img/kkutu/intro/grac_all.svg")
+			div#intro-rc
+				img(style="height: 50px", class="light", src="/img/kkutu/intro/kkutu_logo_dark.svg")
+				img(style="height: 50px", class="dark", src="/img/kkutu/intro/kkutu_logo_dark.svg")
+				div#intro-text
+					+FA("circle-notch")
+					label#intro-inner= L('LOADING')
+				div#version= VERSION
 		div#Top
 			+MMenu()
 			div#global-notice
