--- a/neofront/static/css/m_style.css
+++ b/neofront/static/css/m_style.css
@@ -15,14 +15,25 @@
  * You should have received a copy of the GNU General Public License
  * along with this program. If not, see <http://www.gnu.org/licenses/>.
  */
- @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap');
+
+ @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
+ @import url('https://cdn.jsdelivr.net/npm/galmuri@latest/dist/galmuri.css');
+ @font-face {
+	font-family: 'NanumBarunGothic';
+	src: url('media/NanumBarunGothicLight.woff') format('woff');
+}
+   @font-face {
+    font-family: 'D2Coding';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_three@1.0/D2Coding.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 
 body{
 	color: #EEEEEE;
 	padding: 0px;
 	margin: 0px;
 	min-width: 360px;
-	font-family: 'Pretendard', 맑은 고딕, 돋움;
 }
 a{
 	color: inherit;
@@ -126,7 +137,8 @@ span{
 	.autocomp-item:hover, .autocomp-select{ color: #FFFFFF; background-color: rgba(50, 50, 50, 0.8); }
 #account{ text-align: right;
     float: right;
-    margin: 1px;
+	margin-right: 10px;
+    margin-top: 7px;
     font-size: 18px;
     color: #48473a;
 }
@@ -139,10 +151,16 @@ span{
 }
 #account-info{
 	float: left;
-	padding-top: 8px;
+	padding-top: 6px;
 	margin-right: 8px;
 	cursor: pointer;
 	transition: color 300ms ease;
+}
+#SideMenuBtn{
+	float: left;
+    color: black;
+    padding-left: 16px;
+    padding-top: 15px;
 }
 #global-notice{
     display: flex;
@@ -278,9 +296,54 @@ span{
 .auto-selected{ color: #EEEE44; background-color: #3B3B3B; }
 
 .sidebtn{
-	border: none;
-    padding-bottom: 0px;
-    padding-top: 0px;
+    box-sizing: border-box;
+    height: 30px;
+    width: 100%;
+    flex-shrink: 0;
+    border-radius: 8px;
+    background-color: #FFF;
+    margin-bottom: 15px;
+    padding: 0px;
+    text-align: left;
+    font-size: 15px;
+    padding: 0px 10px 0px 10px;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
+    border: none;
+}
+.sidebtn .fa, .sidebtn h3 {
+    display: inline-block;
+}
+.sidebtn .fa {
+    margin-right: 11px;
+}
+.sidebtn h3 {
+    font-size: 15px;
+}
+
+#creditpopup-close{
+	background-color: transparent;
+	color: #fff;
+    border: none;
+    font-size: 48px;
+}
+#creditpopup-content{
+	display: flex;
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    justify-content: center;
+}
+.animating-credit{
+	animation: 80s credits linear infinite;
+	animation-delay: 1s;
+}
+@keyframes credits {
+	0% {
+	top: 100%;
+	}
+	100% {
+	top: -400%;
+	}
 }
 .mslist{
 	display: flex;
